force-app/main/default/objects/JBCXM__Dashboard__c/JBCXM__Dashboard__c.object-meta.xml
<CustomObject>
    <label>Dashboard</label>
    <nameField>
        <label>Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>