force-app/main/default/objects/JBCXM__Dashboard__c/fields/JBCXM__FilterConditions__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__FilterConditions__c</fullName>
    <label>Layout Options</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>