force-app/main/default/objects/JBCXM__Dashboard__c/fields/JBCXM__GlobalFilters__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GlobalFilters__c</fullName>
    <label>Global Filter options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>