force-app/main/default/objects/JBCXM__Dashboard__c/fields/JBCXM__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEnabled</label>
    <type>Checkbox</type>
</CustomField>