force-app/main/default/objects/JBCXM__Dashboard__c/fields/JBCXM__LayoutType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LayoutType__c</fullName>
    <label>Layout Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>