force-app/main/default/objects/JBCXM__Dashboard__c/fields/JBCXM__ReportSection__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ReportSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReportSection</label>
    <referenceTo>JBCXM__ReportSection__c</referenceTo>
    <relationshipLabel>ReportSection</relationshipLabel>
    <relationshipName>ReportSection</relationshipName>
    <type>Lookup</type>
</CustomField>